update my first web site

--- a/my_first_full_website.html
+++ b/my_first_full_website.html
@@ -4,6 +4,8 @@
         <meta name="viewpoint" content="width=device-width,   initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title> UI</title>
+        <script src="https://kit.fontawesome.com/71a2b03622.js"></script> <!--fonstawesome link...-->
+
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
@@ -199,7 +201,7 @@ body{
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a href="#" class="navbar-brand ml-3">Dtu:)<span style="color: #00E8E8;">tion</span></a>
+                <a href="#" class="navbar-brand ml-3">shah:)<span style="color: #00E8E8;">Alam</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
                  aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">
                  <span class="navbar-toggle-icon"></span>
@@ -243,7 +245,7 @@ body{
                 <div class="site-content">
                     <div class="d-flex justify-content-center">
                         <div class="d-flex flex-column">
-                            <h1 class="site-title">Bootstrap User Interface</h1>
+                            <h1 class="site-title" style="color: red;">Welcome to Shah alam website</h1> <!--bootstrap color-->>
                             <p class="site-desc"> hellow frd this website is madeup by me name to suna hi hoga shah alam</p>
 
                             <div class="d-flex flex-row">
@@ -359,7 +361,7 @@ body{
                     <div class="row">
                         <div class="col-md-4">
                             <div class="d-flex flex-row">
-                                <i class="fas fa-question fa-3x m-2"></i>
+                                <i class="fas fa-question fa-3x m-2"></i>  <!--support icon-->
                                 <div class="d-flex flex-column">
                                     <h3 class="m-2">24/7 Support</h3>
                                     <p class="m-2">
@@ -373,7 +375,7 @@ body{
                         </div>
                         <div class="col-md-4">
                             <div class="d-flex flex-column">
-                                <i class="fas fa-seeding fa-3x m-2"></i>
+                                <i class="fas fa-seeding fa-3x m-2"></i> <!--marketing icon-->
                                 <div class="d-flex flex-column">
                                     <h3 class="m-2">Marketing</h3>
                                     <p class="m-2">
@@ -475,10 +477,22 @@ body{
 
                     <div class="social" style="margin: 5%;">
                         <div class="d-flex flex-row">
-                            <i class="feb fa-facebook-f m-2"></i>
+                            <a href="#">
+                            <i class="fab fa-facebook-f m-2"></i>
+                            </a>
+                            <a href="#">
                             <i class="fab fa-twitter m-2"></i>
+                            </a>
+                            <a href="#">
                             <i class="fab fa-instagaram m-2"></i>
-                            <i class="fab fa-twitter m-2"></i>
+                            </a>
+                            <a href="#">
+                            <i class="fab fa-google m-2"></i>
+                            </a>
+                            <a href="#">
+                            <i class="fab fa-youtube m-2"></i>
+                            </a>
+                           
                         </div>
                     </div>
                     <hr>
